2002-01-24  Cristy  <cristy@mystic.es.dupont.com>
  * Palm pixmap supported contributed by Christopher R. Hawks.
  * Added -mask to the convert/mogrify programs to add clips masks to
    an image.

2002-01-21  Cristy  <cristy@mystic.es.dupont.com>
  * Fixed occasional small memory leak associated with exceptions.
  * Persistent cache is no longer updated (MPC coder).

2002-01-20  Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
  * Fixed some bugs in the uncompressed PGM and PPM reader/writer (pnm.c).

2002-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * configure.ac: Removed test for libwmf/font.h.

2002-01-13  Leonard Rosenthol  <leonardr@lazerware.com>
  * More bug fixes and improvements in PSD writer.

2002-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * magick/magic.mgk: Added entries for detecting PFA and PFB formats.
    Is this file used for anything anymore?
  * coders/modules.mgk: Add support for PFA fonts.
  * coders/ttf.c (RegisterTTFImage): Add support for PFA fonts.
  * magick/annotate.c (RenderType): Add support for PFA fonts.

2002-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Modified type.mgk so that it may include the additional files
    type-windows.mgk, type-solaris.mgk, and type-ghostscript.mgk depending
    on the operating system used, and the font files available.

2002-01-11  Leonard Rosenthol  <leonardr@lazerware.com>
  * PSD now supports writing layered images and IPTC data
  * Fixed some bugs in XCF

2002-01-11  Cristy  <cristy@mystic.es.dupont.com>
  * Added image list methods to the API.

2002-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * configure.ac : Renamed configure option --with-ttf-fontpath to
    --with-fontpath since ImageMagick loads more than TrueType fonts.
  * ChangeLog : Renamed Changelog.txt to ChangeLog in order to conform
    to GNU and open-source standards.

2002-01-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>