@@ -155,6 +155,7 @@
 %    -tile filename       tile image when filling a graphic primitive
 %    -transparent color   make this color transparent within the image
 %    -treedepth value     depth of the color tree
+%    -trim                trim image edges
 %    -type type           image type
 %    -units type          PixelsPerInch, PixelsPerCentimeter, or Undefined
 %    -unsharp geometry    sharpen the image
@@ -574,6 +575,7 @@ static void ConvertUsage(void)
       "-tile filename       tile image when filling a graphic primitive",
       "-transparent color   make this color transparent within the image",
       "-treedepth value     depth of the color tree",
+      "-trim                trim image edges",
       "-type type           image type",
       "-units type          PixelsPerInch, PixelsPerCentimeter, or Undefined",
       "-unsharp geometry    sharpen the image",
@@ -2090,6 +2092,8 @@ static unsigned int ConvertUtility(int argc,char **argv)
                 }
               break;
             }
+          if (LocaleCompare("trim",option+1) == 0)
+            break;
           if (LocaleCompare("type",option+1) == 0)
             {
               image_info->type=UndefinedType;
